--- a/src/assets/scss/include/offices/_offices-tab.scss
+++ b/src/assets/scss/include/offices/_offices-tab.scss
@@ -7,6 +7,10 @@
     font-size: 26px;
     line-height: 20px;
     letter-spacing: 0.8px;
+
+    @media (max-width: 1199px) {
+      line-height: 30px;
+    }
   }
 
   span {
