--- a/src/assets/scss/include/offices/_offices-tabs.scss
+++ b/src/assets/scss/include/offices/_offices-tabs.scss
@@ -24,11 +24,24 @@
 
       &:not(:last-child) {
         margin-right: 20px;
+
+        @media (max-width: 420px) {
+          margin-right: 15px;
+        }
+
+        @media (max-width: 380px) {
+          margin-right: 10px;
+        }
       }
     }
 
     @media (max-width: 1199px) {
       justify-content: center;
     }
+  }
+
+  @media (max-width: 1199px) {
+    height: auto;
+    overflow: auto;
   }
 }
